Revisions to build scripts to move everything to 'target', remove old functions no longer used, and leave in the common script only code actually used in common between the different build scripts (outer and inner).